--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         // Enregistrement du Service Worker
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', function() {
-                navigator.serviceWorker.register('/sw.js').then(function(registration) {
+                navigator.serviceWorker.register('sw.js').then(function(registration) {
                     // L'enregistrement a réussi
                     console.log('ServiceWorker registration successful with scope: ', registration.scope);
                 }, function(err) {
