--- a/index.html
+++ b/index.html
@@ -2,38 +2,38 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=1400, initial-scale=0.3, minimum-scale=0.1, maximum-scale=3, user-scalable=yes">
     <title>Calendrier Labos</title>
     <link rel="manifest" href="manifest.json">
     <style>
-        body, html, iframe {
+        body, html {
             margin: 0;
             padding: 0;
             width: 100%;
             height: 100%;
-            border: none; /* Enlève la bordure autour de l'iframe */
-            overflow: hidden; /* Empêche les doubles barres de défilement */
+            overflow: auto; /* Permet le scroll */
+        }
+        iframe {
+            margin: 0;
+            padding: 0;
+            width: 100%;
+            height: 100%;
+            border: none;
         }
     </style>
 </head>
 <body>
-
-    <iframe id="gas-app" src="https://script.google.com/macros/s/AKfycby7RLD-KuD63gHHG-ubnTECMODBeF7W4zkYuWQIVVXjCyY_VzlzStBC3ltVJsdVt1S0/exec"></iframe>
-
+    <iframe id="gas-app" src="https://script.google.com/macros/s/AKfycby7RLD-KuD63gHHG-ubnTECMODBeF7W4zkYuWQIVVXjCyY_VzlzStBC3ltVJsdVt1S0/exec" scrolling="yes"></iframe>
     <script>
-        // Enregistrement du Service Worker
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', function() {
                 navigator.serviceWorker.register('sw.js').then(function(registration) {
-                    // L'enregistrement a réussi
                     console.log('ServiceWorker registration successful with scope: ', registration.scope);
                 }, function(err) {
-                    // L'enregistrement a échoué
                     console.log('ServiceWorker registration failed: ', err);
                 });
             });
         }
     </script>
-
 </body>
 </html>
