--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
             padding: 0;
             width: 100%;
             height: 100%;
-            overflow: auto; /* Permet le scroll */
+            overflow: auto;
+            -webkit-overflow-scrolling: touch; /* Scroll fluide iOS */
         }
         iframe {
             margin: 0;
@@ -19,11 +20,18 @@
             width: 100%;
             height: 100%;
             border: none;
+            -webkit-overflow-scrolling: touch;
+            touch-action: auto; /* Permet tous les gestes touch */
+            pointer-events: auto; /* S'assure que les clics passent */
         }
     </style>
 </head>
 <body>
-    <iframe id="gas-app" src="https://script.google.com/macros/s/AKfycby7RLD-KuD63gHHG-ubnTECMODBeF7W4zkYuWQIVVXjCyY_VzlzStBC3ltVJsdVt1S0/exec" scrolling="yes"></iframe>
+    <iframe id="gas-app" 
+            src="https://script.google.com/macros/s/AKfycby7RLD-KuD63gHHG-ubnTECMODBeF7W4zkYuWQIVVXjCyY_VzlzStBC3ltVJsdVt1S0/exec" 
+            scrolling="yes"
+            allowfullscreen>
+    </iframe>
     <script>
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', function() {
