--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
             padding: 0;
             width: 100%;
             height: 100%;
-            overflow: auto;
-            -webkit-overflow-scrolling: touch; /* Scroll fluide iOS */
+            /* Supprimez overflow: auto ici pour éviter les conflits */
+            -webkit-overflow-scrolling: touch; 
         }
         iframe {
             margin: 0;
@@ -20,9 +20,11 @@
             width: 100%;
             height: 100%;
             border: none;
+            /* L'iframe gère le défilement */
+            overflow: auto; 
             -webkit-overflow-scrolling: touch;
-            touch-action: auto; /* Permet tous les gestes touch */
-            pointer-events: auto; /* S'assure que les clics passent */
+            touch-action: auto; 
+            pointer-events: auto;
         }
     </style>
 </head>
@@ -33,15 +35,7 @@
             allowfullscreen>
     </iframe>
     <script>
-        if ('serviceWorker' in navigator) {
-            window.addEventListener('load', function() {
-                navigator.serviceWorker.register('sw.js').then(function(registration) {
-                    console.log('ServiceWorker registration successful with scope: ', registration.scope);
-                }, function(err) {
-                    console.log('ServiceWorker registration failed: ', err);
-                });
-            });
-        }
+        // ... (Service Worker Code)
     </script>
 </body>
 </html>
