--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             width: 100%;
             height: 100%;
             border: none;
-            /* L'iframe gère le défilement */
+            /* ASSUREZ-VOUS QUE C'EST BIEN 'auto' ou 'scroll' */
             overflow: auto; 
             -webkit-overflow-scrolling: touch;
             touch-action: auto; 
@@ -30,10 +30,11 @@
 </head>
 <body>
     <iframe id="gas-app" 
-            src="https://script.google.com/macros/s/AKfycby7RLD-KuD63gHHG-ubnTECMODBeF7W4zkYuWQIVVXjCyY_VzlzStBC3ltVJsdVt1S0/exec" 
-            scrolling="yes"
-            allowfullscreen>
-    </iframe>
+        src="https://script.google.com/macros/s/AKfycby7RLD-KuD63gHHG-ubnTECMODBeF7W4zkYuWQIVVXjCyY_VzlzStBC3ltVJsdVt1S0/exec" 
+        scrolling="yes"
+        allowfullscreen
+        style="transform: scale(1); transform-origin: top left;">
+</iframe>
     <script>
         // ... (Service Worker Code)
     </script>
