--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         src="https://script.google.com/macros/s/AKfycby7RLD-KuD63gHHG-ubnTECMODBeF7W4zkYuWQIVVXjCyY_VzlzStBC3ltVJsdVt1S0/exec" 
         scrolling="yes"
         allowfullscreen
-        style="transform: scale(1); transform-origin: top left;">
+        style="transform: none !important;">
 </iframe>
     <script>
         // ... (Service Worker Code)
