--- a/index.html
+++ b/index.html
@@ -29,11 +29,10 @@
     </style>
 </head>
 <body>
-    <iframe id="gas-app" 
-        src="https://script.google.com/macros/s/AKfycby7RLD-KuD63gHHG-ubnTECMODBeF7W4zkYuWQIVVXjCyY_VzlzStBC3ltVJsdVt1S0/exec" 
-        scrolling="yes"
-        allowfullscreen
-        style="transform: none !important;">
+    <iframe id="gas-app"
+  src="https://script.google.com/macros/s/…/exec"
+  scrolling="yes"
+  allowfullscreen>
 </iframe>
     <script>
         // ... (Service Worker Code)
