--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
 <body>
     <iframe id="gas-app"
-  src="https://script.google.com/macros/s/…/exec"
+  src="https://script.google.com/macros/s/AKfycby7RLD-KuD63gHHG-ubnTECMODBeF7W4zkYuWQIVVXjCyY_VzlzStBC3ltVJsdVt1S0/exec"
   scrolling="yes"
   allowfullscreen>
 </iframe>
