--- a/index.html
+++ b/index.html
@@ -35,7 +35,25 @@
   allowfullscreen>
 </iframe>
     <script>
-        // ... (Service Worker Code)
-    </script>
+
+        if ('serviceWorker' in navigator) {
+
+            window.addEventListener('load', function() {
+
+                navigator.serviceWorker.register('sw.js').then(function(registration) {
+
+                    console.log('ServiceWorker registration successful with scope: ', registration.scope);
+
+                }, function(err) {
+
+                    console.log('ServiceWorker registration failed: ', err);
+
+                });
+
+            });
+
+        }
+
+    </script> 
 </body>
 </html>
