--- a/index.html
+++ b/index.html
@@ -49,10 +49,11 @@
 <body>
 
     <!-- IFRAME vers ta WebApp GAS -->
-    <iframe id="gas-app"
+   <iframe id="gas-app"
         src="https://script.google.com/macros/s/AKfycby7RLD-KuD63gHHG-ubnTECMODBeF7W4zkYuWQIVVXjCyY_VzlzStBC3ltVJsdVt1S0/exec"
-        allow="fullscreen">
-    </iframe>
+        style="width:100%; height:100%; border:none; overflow:auto;">
+</iframe>
+
 
     <script>
         // Installation du Service Worker (mise à jour automatique)
