--- a/index.html
+++ b/index.html
@@ -107,7 +107,9 @@
 
 <body>
   <div class="splash-container">
-    <img src="images/icon-512x512.png" alt="Logo" class="logo">
+    <img src="images/Champigny_Logo_horizontal_BLANC.png" 
+     alt="Logo" 
+     class="logo">
     <h1 class="app-title">🧪 Calendrier des Laboratoires</h1>
     <p class="app-subtitle">Collège de Champigny</p>
     
