--- a/index.html
+++ b/index.html
@@ -34,12 +34,13 @@
     }
     
     .logo {
-      width: 120px;
-      height: 120px;
-      margin-bottom: 30px;
-      animation: pulse 2s ease-in-out infinite;
-      filter: drop-shadow(0 4px 20px rgba(251, 223, 75, 0.3));
-    }
+  width: 180px;       /* plus large */
+  height: auto;       /* conserver ratio */
+  margin-bottom: 30px;
+  animation: pulse 2s ease-in-out infinite;
+  filter: drop-shadow(0 4px 20px rgba(251, 223, 75, 0.3));
+}
+
     
     .app-title {
       color: #FBDF4B;
