--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
       box-sizing: border-box;
     }
 
-    /* Centrage parfait sans saut */
     body {
       background: linear-gradient(135deg, #031E45 0%, #0a2d5c 100%);
-      height: 100vh;
+      min-height: 100vh;
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -36,8 +35,8 @@
     }
 
     .logo {
-      width: 180px;
-      height: auto;
+      width: 180px; /* plus large */
+      height: auto; /* conserver ratio */
       margin-bottom: 30px;
       animation: pulse 2s ease-in-out infinite;
       filter: drop-shadow(0 4px 20px rgba(251, 223, 75, 0.3));
@@ -131,37 +130,15 @@
       navigator.serviceWorker.register('./sw.js');
     }
 
-    const GAS_URL = "https://script.google.com/macros/s/AKfycbwthR04LV4UFoqfsOSSOzWo-bN94yv6UDT2xS-I1N8ld7de4Id_j78k0B6iXxqKBQun/exec";
-
-    let gasReady = false;
-
-    // 🔥 Réveil Apps Script FIABLE via image invisible
-    const warm = new Image();
-    warm.src = GAS_URL + "?warmup=" + Date.now();
-    warm.onload = () => gasReady = true;
-    warm.onerror = () => gasReady = true; // même erreur = GAS réveillé
-
-    // Durée du splash
-    const SPLASH_TIME = 2000;
-
-    // Redirection après timer
+    // Rediriger après un court délai pour montrer le splash
     setTimeout(() => {
-      window.location.href = GAS_URL;
-    }, SPLASH_TIME);
-
-    // Si GAS est prêt plus tôt → accélérer
-    const checkReady = setInterval(() => {
-      if (gasReady) {
-        clearInterval(checkReady);
-        window.location.href = GAS_URL;
-      }
-    }, 100);
-
-    // Sécurité : max 8 sec
-    setTimeout(() => {
-      window.location.href = GAS_URL;
-    }, 8000);
+      window.location.href = "https://script.google.com/macros/s/AKfycbwthR04LV4UFoqfsOSSOzWo-bN94yv6UDT2xS-I1N8ld7de4Id_j78k0B6iXxqKBQun/exec";
+    }, 2500);
   </script>
+
+</body>
+</html>
+
 
 </body>
 </html>
